@@ -1,10 +1,10 @@
 package com.harmony.chatbot.user;
 
-import com.harmony.chatbot.theme.ChatbotThemeService;
-import org.springframework.security.crypto.password.PasswordEncoder;
-import org.springframework.stereotype.Service;
+import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
@@ -14,29 +14,21 @@ public class UserService implements UserDetailsService {
 
     private final UserRepository userRepository;
     private final PasswordEncoder passwordEncoder;
-    private final ChatbotThemeService themeService;
+    private final ApplicationEventPublisher eventPublisher;
 
-    public UserService(
-            UserRepository userRepository,
-            PasswordEncoder passwordEncoder,
-            ChatbotThemeService themeService
-    ) {
+    public UserService(UserRepository userRepository,
+                       PasswordEncoder passwordEncoder,
+                       ApplicationEventPublisher eventPublisher) {
         this.userRepository = userRepository;
         this.passwordEncoder = passwordEncoder;
-        this.themeService = themeService;
+        this.eventPublisher = eventPublisher;
     }
 
     @Override
     public UserEntity loadUserByUsername(String username) throws UsernameNotFoundException {
-        UserEntity user = userRepository.findByUsername(username)
-                .orElseThrow(() -> new UsernameNotFoundException("User not found"));
-
-        // TEMP ROLE NORMALIZATION (your existing fix)
-        if (user.getRole() != null && user.getRole().startsWith("ROLE_")) {
-            user.setRole(user.getRole().replace("ROLE_", ""));
-        }
-
-        return user;
+        return userRepository.findByUsername(username)
+                .orElseThrow(() ->
+                        new UsernameNotFoundException("User not found: " + username));
     }
 
     public Optional<UserEntity> getUserByUsernameOptional(String username) {
@@ -52,20 +44,18 @@ public class UserService implements UserDetailsService {
     }
 
     public UserEntity saveUser(UserEntity user) {
-        boolean isNewUser = (user.getId() == null);
+        boolean isNew = (user.getId() == null);
 
-        if (user.getUsername() == null || user.getUsername().trim().isEmpty()) {
+        if (user.getUsername() == null || user.getUsername().isBlank()) {
             throw new IllegalArgumentException("Username cannot be empty");
         }
-        if (user.getEmail() == null || user.getEmail().trim().isEmpty()) {
+
+        if (user.getEmail() == null || user.getEmail().isBlank()) {
             throw new IllegalArgumentException("Email cannot be empty");
         }
 
-        user.setUsername(user.getUsername().substring(0, Math.min(50, user.getUsername().length())));
-        user.setEmail(user.getEmail().substring(0, Math.min(100, user.getEmail().length())));
-
         if (user.getPassword() != null &&
-            !user.getPassword().isEmpty() &&
+            !user.getPassword().isBlank() &&
             !user.getPassword().startsWith("$2")) {
 
             user.setPassword(passwordEncoder.encode(user.getPassword()));
@@ -73,9 +63,9 @@ public class UserService implements UserDetailsService {
 
         UserEntity savedUser = userRepository.save(user);
 
-        // ✅ AUTO-CREATE THEME ON FIRST SAVE
-        if (isNewUser) {
-            themeService.createDefaultThemeIfMissing(savedUser);
+        // 🔥 Publish event ONLY when user is newly created
+        if (isNew) {
+            eventPublisher.publishEvent(new UserCreatedEvent(savedUser.getId()));
         }
 
         return savedUser;
